make it derive macro

--- a/derive_world/Cargo.toml
+++ b/derive_world/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "impl_type_ref"
+name = "derive_world"
 version = "0.1.0"
 authors = ["Masahiro Yoshida <mypianoplayer@gmail.com>"]
 edition = "2018"
